--- a/ProjectBeetz/View/Base.lproj/Main.storyboard
+++ b/ProjectBeetz/View/Base.lproj/Main.storyboard
@@ -264,7 +264,7 @@
             </objects>
             <point key="canvasLocation" x="1844" y="132.68365817091455"/>
         </scene>
-        <!--Enrollment View Controller-->
+        <!--Title-->
         <scene sceneID="21L-Q8-mck">
             <objects>
                 <viewController id="8ii-jV-b9O" customClass="EnrollmentViewController" customModule="ProjectBeetz" customModuleProvider="target" sceneMemberID="viewController">
@@ -273,7 +273,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pvs-zy-soj">
-                                <rect key="frame" x="150" y="502" width="25" height="40"/>
+                                <rect key="frame" x="150" y="546" width="25" height="40"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="GSq-XD-6Vv"/>
@@ -285,7 +285,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name (required)" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="4yS-E0-M8D">
-                                <rect key="frame" x="80" y="110" width="220" height="30"/>
+                                <rect key="frame" x="80" y="154" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="MJW-yq-Qk9"/>
                                 </constraints>
@@ -294,7 +294,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer ID (required)" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="iJc-TR-2qd">
-                                <rect key="frame" x="80" y="166" width="220" height="30"/>
+                                <rect key="frame" x="80" y="210" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="GwF-dJ-qdJ"/>
                                 </constraints>
@@ -303,7 +303,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip Code (optional)" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="nBR-HM-gPx">
-                                <rect key="frame" x="80" y="446" width="220" height="30"/>
+                                <rect key="frame" x="80" y="490" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="rD5-HE-DwR"/>
                                 </constraints>
@@ -312,7 +312,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Need Indicator (required)" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="BSw-dK-itO">
-                                <rect key="frame" x="80" y="222" width="220" height="30"/>
+                                <rect key="frame" x="80" y="266" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="ryk-AE-oeR"/>
                                 </constraints>
@@ -324,7 +324,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Market name (required)" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="KGL-8k-bNc">
-                                <rect key="frame" x="80" y="278" width="220" height="30"/>
+                                <rect key="frame" x="80" y="322" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="bH5-8E-aXZ"/>
                                 </constraints>
@@ -336,7 +336,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Primary language (optional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Moq-fg-GEF">
-                                <rect key="frame" x="80" y="334" width="220" height="30"/>
+                                <rect key="frame" x="80" y="378" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="J16-09-BEF"/>
                                 </constraints>
@@ -348,7 +348,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Household Size (optional)" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="aAv-0d-Ksd">
-                                <rect key="frame" x="80" y="390" width="220" height="30"/>
+                                <rect key="frame" x="80" y="434" width="220" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="575-rO-fw2"/>
                                 </constraints>
@@ -357,7 +357,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UfX-oM-nhD">
-                                <rect key="frame" x="44" y="278" width="28" height="30"/>
+                                <rect key="frame" x="44" y="322" width="28" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Hoy-tq-h6W"/>
@@ -368,7 +368,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xuL-ih-jE9">
-                                <rect key="frame" x="44" y="222" width="28" height="30"/>
+                                <rect key="frame" x="44" y="266" width="28" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="guh-2x-0hj"/>
@@ -379,7 +379,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAs-iK-pgY">
-                                <rect key="frame" x="44" y="334" width="28" height="30"/>
+                                <rect key="frame" x="44" y="378" width="28" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="quU-Ku-r1O"/>
@@ -428,6 +428,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dIe-N8-fSr"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="PTe-0L-Ib7">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="106-WH-nIy"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="customerIDTextField" destination="iJc-TR-2qd" id="Y1g-Sr-Vul"/>
                         <outlet property="householdSizeTextField" destination="aAv-0d-Ksd" id="Dqt-Cv-92x"/>
@@ -443,7 +446,7 @@
             </objects>
             <point key="canvasLocation" x="2664.8000000000002" y="465.51724137931041"/>
         </scene>
-        <!--Distribution View Controller-->
+        <!--Title-->
         <scene sceneID="0yo-R0-m0n">
             <objects>
                 <viewController storyboardIdentifier="DistributionViewController" id="Rhl-JI-zpM" customClass="DistributionViewController" customModule="ProjectBeetz" customModuleProvider="target" sceneMemberID="viewController">
@@ -452,7 +455,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZEg-Xk-2y0">
-                                <rect key="frame" x="133" y="469" width="54" height="30"/>
+                                <rect key="frame" x="133" y="513" width="54" height="30"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="X0d-GF-6QI"/>
@@ -466,7 +469,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="hMt-Gl-Bm2">
-                                <rect key="frame" x="20" y="128" width="280" height="30"/>
+                                <rect key="frame" x="20" y="172" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Gfp-ch-fy5"/>
                                 </constraints>
@@ -475,7 +478,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer ID" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="OTn-71-aol">
-                                <rect key="frame" x="20" y="184" width="280" height="30"/>
+                                <rect key="frame" x="20" y="228" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="tZV-GB-NbN"/>
                                 </constraints>
@@ -484,7 +487,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Match Amt. Available" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ivW-2a-be4">
-                                <rect key="frame" x="182" y="240" width="118" height="30"/>
+                                <rect key="frame" x="182" y="284" width="118" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lw6-Ea-2cP"/>
                                 </constraints>
@@ -493,7 +496,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer owes" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t8m-bx-HnJ">
-                                <rect key="frame" x="20" y="349" width="280" height="30"/>
+                                <rect key="frame" x="20" y="393" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="rJj-Jc-Pez"/>
                                 </constraints>
@@ -502,7 +505,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Available Match " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWM-eq-afs">
-                                <rect key="frame" x="20" y="240" width="124.5" height="30"/>
+                                <rect key="frame" x="20" y="284" width="124.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="YqL-hR-TaL"/>
                                 </constraints>
@@ -511,7 +514,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sAq-Q4-hLJ">
-                                <rect key="frame" x="110" y="409" width="100" height="30"/>
+                                <rect key="frame" x="110" y="453" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="0je-XU-EDE"/>
@@ -524,7 +527,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer Token Request" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jgw-Kd-99R">
-                                <rect key="frame" x="20" y="293" width="280" height="30"/>
+                                <rect key="frame" x="20" y="337" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="aiw-AI-4uE"/>
                                 </constraints>
@@ -563,6 +566,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HHW-gz-rIk"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="k8J-0g-T5x">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="1tN-hO-SXF"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="availableMatchLabel" destination="sWM-eq-afs" id="o10-Y4-Mhk"/>
                         <outlet property="customerIDTextField" destination="OTn-71-aol" id="4bg-g0-SDX"/>
@@ -597,6 +604,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="a71-Nk-ACX"/>
         <segue reference="KqS-K8-0Fd"/>
     </inferredMetricsTieBreakers>
 </document>
